# centralized-advertising-ai-analytics

./: .gitignore  ENHANCED_SETUP.md  MANUAL_SQL_FIX.md  Makefile  QUICK_TEST_GUIDE.md  README.md  docker-compose.yml
backend/: .env.example  API_TEST_RESULTS.md  Dockerfile  ENHANCED_ML_SYSTEM_COMPLETE.md  HOUR1_DATABASE_SETUP_COMPLETE.md  HOUR2_IMPLEMENTATION.md  HOURLY_SYNC_IMPLEMENTATION.md  HOURLY_SYNC_QUICKSTART.md  ML_DASHBOARD_IMPLEMENTATION.md  ML_DASHBOARD_QUICKSTART.md  Makefile  PROJECT_CLEANED.md  README.md  alembic.ini  create_ml_tables.sql  create_ml_tables_simple.sql  create_tables_simple.py  docker-compose.yml  fix_ml_tables.sh  fix_tables.sh  pyproject.toml  requirements.txt  setup_database.py  test_api.py  test_basic.py  test_complete_system.py  test_curl.sh  test_database.py  test_fixed_ml.py  test_ml_complete.py  test_ml_dashboard.py  test_models_only.py  verify_scheduler.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_ml_prediction_tables.py  002_ml_dashboard_tables.py  002_ml_predictions_tables.py
backend/app/: main.py
backend/app/configs/: database.py  database_flexible.py
backend/app/models/: __init__.py  alert.py  campaign.py  ml_dashboard.py  ml_predictions.py  prediction.py  recommendation.py
backend/app/routers/: fix_tables.py  ml_dashboard.py  recommendations.py  scheduler.py  setup.py  sync.py  test_mock.py
backend/app/scheduler/: ml_scheduler.py  ml_tasks.py
backend/app/services/: enhanced_scheduler.py  llm_service.py  ml_dashboard_service.py  ml_sync_service.py  mock_api.py  scheduler.py  (+2 more)
(+80 files in other folders)
